--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,14 @@ description: >- # this means to ignore newlines until "baseurl:"
 #  Google search results) and in your feed.xml site description.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "www.chenwan.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: chenshifangcheng
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
 
