Update config.yml to make markdown can line feed
Set hard_wrap to true means markdwon can line feed when one tap Enter

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ markdown: kramdown
 highlighter: rouge
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
-  hard_wrap: false             # true can line feed
+  hard_wrap: true             # true can line feed
 
 
 
