--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,16 +1,45 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
-  "description": "A personal blog by engineer",
-  "icons": [{
-    "src": "icons/pwa_icon_128.png",
-    "sizes": "128x128",
-    "type": "image/png"
-  }, {
-    "src": "icons/pwa_icon_512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }],
+  "name": "Chwyatt",
+  "short_name": "Chwyatt",
+  "description": "A personal blog by Chwyatt",
+  "icons": [
+    {
+     "src": "icons/android-icon-36x36.png",
+     "sizes": "36x36",
+     "type": "image/png",
+     "density": "0.75"
+    },
+    {
+     "src": "icons/android-icon-48x48.png",
+     "sizes": "48x48",
+     "type": "image/png",
+     "density": "1.0"
+    },
+    {
+     "src": "icons/android-icon-72x72.png",
+     "sizes": "72x72",
+     "type": "image/png",
+     "density": "1.5"
+    },
+    {
+     "src": "icons/android-icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image/png",
+     "density": "2.0"
+    },
+    {
+     "src": "icons/android-icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image/png",
+     "density": "3.0"
+    },
+    {
+     "src": "icons/android-icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image/png",
+     "density": "4.0"
+    }
+  ],
   "background_color": "#fff",
   "theme_color": "#000",
   "start_url": "/",
